<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="orgDetailsViewModel"
            type="com.techiespace.projects.jafeedback.OrgDetailsViewModel" />

        <!--<variable-->
        <!--name="handlers"-->
        <!--type="com.techiespace.projects.jafeedback.EventHandler" />-->
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/brand_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <EditText
                    android:id="@+id/d_edit_org_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="2"
                    android:hint="@string/hint_name"
                    android:inputType="text"
                    android:text="@{orgDetailsViewModel.getOrgLiveData.org}"
                    android:textSize="30sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/feedback"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="16dp"
                        android:paddingTop="16dp"
                        android:weightSum="7">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="@string/email" />

                        <EditText
                            android:id="@+id/d_edit_pri_email"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress"
                            android:text="@{orgDetailsViewModel.getEmailsLiveData[0].email}"
                            android:textColor="@color/cardview_dark_background" />
                    </LinearLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="#c0c0c0" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="16dp"
                        android:paddingTop="16dp"
                        android:weightSum="7">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="@string/phone" />

                        <EditText
                            android:id="@+id/d_edit_pri_phone"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:hint="@string/hint_phone"
                            android:inputType="phone"
                            android:text="@{orgDetailsViewModel.getPhonesLiveData[0].phone}"
                            android:textColor="@color/cardview_dark_background" />
                        <!--android:onClick="@{handlers.onClickDPhone}"/>-->
                    </LinearLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="#c0c0c0" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="16dp"
                        android:paddingTop="16dp"
                        android:weightSum="7">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="@string/facebook_handle" />

                        <EditText
                            android:id="@+id/d_edit_facebook"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:hint="@string/hint_fb"
                            android:inputType="text"
                            android:text="@{orgDetailsViewModel.getSocialLiveData[0].facebook}"
                            android:textColor="@color/cardview_dark_background" />
                    </LinearLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="#c0c0c0" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="16dp"
                        android:paddingTop="16dp"
                        android:weightSum="7">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="@string/twitter_handle" />

                        <EditText
                            android:id="@+id/d_edit_twitter"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:hint="@string/hint_tw"
                            android:inputType="text"
                            android:text="@{orgDetailsViewModel.getSocialLiveData[0].twitter}"
                            android:textColor="@color/cardview_dark_background" />
                    </LinearLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="#c0c0c0" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="16dp"
                        android:paddingTop="16dp"
                        android:weightSum="7">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="@string/youtube_handle" />

                        <EditText
                            android:id="@+id/d_edit_youtube"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:hint="@string/hint_yt"
                            android:inputType="text"
                            android:text="@{orgDetailsViewModel.getSocialLiveData[0].youtube}"
                            android:textColor="@color/cardview_dark_background" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/organisation_details"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="16dp"
                        android:paddingTop="16dp"
                        android:weightSum="7">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="@string/website" />

                        <EditText
                            android:id="@+id/d_edit_web_link"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:hint="@string/hint_website"
                            android:inputType="text"
                            android:text="@{orgDetailsViewModel.getDescLiveData[0].website}"
                            android:textColor="@color/cardview_dark_background" />

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/save_org_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="saveOrg"
                android:text="Save" />
        </LinearLayout>
    </ScrollView>
</layout>
